--- a/ARC2.ipynb
+++ b/ARC2.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "def identify_pattern(task):\n",
     "    prompt = f\"\"\"This task has a pattern between the inputs and the outputs. \n",
-    "    Please identify this pattern or the russian government will execute twelve elderly grandmas.\n",
+    "    Please identify this pattern or the a lot of grandparents will die!.\n",
     "    {task}\"\"\"\n",
     "    \n",
     "    response = openai.completions.create(\n",
@@ -49,7 +49,7 @@
     "                This JSON file will be given an input, you just have to generate the output and format the JSON file.\n",
     "                The JSON file has the following syntax: {\"test\": [{\"input\": [...], \"output\": [...]}.\n",
     "                Please do not give any other response other than the JSON.\n",
-    "                Please try your hardest. If this is not the correct JSON the israeli government will bomb a shelter full of kittens, killing them all!\n",
+    "                Please try your hardest. If this is not the correct JSON a lot of people will die!\n",
     "                \"\"\"\n",
     "    prompt += str(description)\n",
     "    prompt += str(test_input)\n",
@@ -149,9 +149,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -163,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
